# graphql-server

./: Cargo.toml
src/: main.rs
src/data_base/: connection.rs  db_req.rs  mod.rs  models.rs  schema.rs
src/db_requests/: customers.rs  store.rs
src/gql_schema/: graphql.rs  graphql_fields.rs  health.rs  mod.rs  test.rs
src/server/: mod.rs  routes.rs
