[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web server framework
warp = "0.3.2"

#logging
log = "0.4.17"

#async
tokio = { version = "1.20.0", features = ["full"] }

#serialization
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

#graphql
async-graphql = "4.0.4"
async-graphql-warp = "4.0.4"

#ORM
diesel = { version = "1.4.8", features = ["postgres"] }

#env var
dotenv = "0.15.0"
